# daily-2026-05-09-forest-fire

./: CMakeLists.txt  README.md  main.cpp
