cmake_minimum_required(VERSION 3.16)
project(ForestFire CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(SFML 2.5 COMPONENTS graphics CONFIG QUIET)
if(NOT SFML_FOUND)
    find_package(PkgConfig QUIET)
    if(PkgConfig_FOUND)
        pkg_check_modules(SFML QUIET sfml-graphics)
    endif()
endif()

if(SFML_FOUND)
    message(STATUS "SFML found: ${SFML_LIBRARIES}")
    add_executable(forest_fire main.cpp)
    target_link_libraries(forest_fire sfml-graphics sfml-window sfml-system)
    target_include_directories(forest_fire PRIVATE ${SFML_INCLUDE_DIRS})
    target_compile_options(forest_fire PRIVATE -Wall)
else()
    message(WARNING "SFML not found — compiling ASCII fallback version")
    add_executable(forest_fire main.cpp)
    target_compile_definitions(forest_fire PUBLIC ASCII_ONLY)
    target_compile_options(forest_fire PRIVATE -Wall -O2)
endif()
